# ai-sql-assistant

./: .env.example  .gitignore  LICENSE  README.md  fix_semantic_identifiers.sql  pyproject.toml  requirements.txt  semantic_junk_data.csv  shouldnt_be_flagged_as_id.csv  test_case_results.csv
config/: settings.py
doc/: BUSINESS_VALUE.md  ai-sql-assistant-summary.md  ai_sql_assistant_design_spec.docx
scripts/: seed_semantic_layer.py
sql/: build.sql  build2.sql  build_obj.sql  build_seed.sql  drop_basetables.sql  drop_semtables.sql  drop_views.sql  fix.sql  purge_basetables.sql  purge_semtables.sql
sql/seed/: seed_finance_data.sql  seed_oltp_all.sql  seed_order_data.sql  seed_semantic_column.sql  seed_semantic_column_all.sql  seed_semantic_column_operational.sql  seed_semantic_column_order.sql  seed_semantic_column_product.sql  seed_semantic_column_stage2.sql  seed_semantic_example_question_all.sql  seed_semantic_example_question_order.sql  seed_semantic_example_question_product.sql  seed_semantic_object_alias.sql  seed_semantic_object_alias_all.sql  seed_semantic_object_alias_product.sql  seed_semantic_object_all.sql  seed_semantic_object_operational.sql  seed_semantic_object_order.sql  seed_semantic_object_product.sql
src/: config.json  db.py  explain.py  llm.py  main.py  prompt.py  test.py  validator.py
src/sql_assistant/: api.py  app.py  cache.py  db.py  exceptions.py  explain.py  llm.py  logging_utils.py  main.py  (+4 more)
tests/: conftest.py  semantic_validation.sql  test_cache.py  test_pipeline.py  test_prompt.py  test_questions.txt  test_validator.py  testdb.py
(+94 files in other folders)
