[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "sql-assistant"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "openai",
    "oracledb",
    "pydantic-settings",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-mock",
]

[project.scripts]
sql-assistant = "sql_assistant.main:main"

[tool.setuptools]
packages = ["sql_assistant", "config"]

[tool.setuptools.package-dir]
sql_assistant = "src/sql_assistant"
config = "config"
